# linxira-components

./: README.md  pyproject.toml
.github/workflows/: ci.yml
api/: org.linxira.Components1.xml
docs/: TRANSACTION_BACKEND.md
policy/: org.linxira.components.policy.in
scripts/: linxira-components  linxira-components-service  linxira-components-worker
service/: linxira-components-worker@.service  linxira-components.service  org.linxira.Components1.conf  org.linxira.Components1.service
src/linxira_components/: __init__.py  backend.py  catalog.py  catalog_v3.py  cli.py  driver_worker.py  errors.py  jsonio.py  models.py  selection.py  service.py  system_transactions.py  worker.py
src/linxira_components/schemas/: catalog-v2.schema.json  catalog-v3.schema.json  confirmation-v1.schema.json  confirmation-v2.schema.json  receipt-v1.schema.json  receipt-v2.schema.json  request-plan-v1.schema.json  request-plan-v2.schema.json  selection-v1.schema.json
tests/: test_core.py  test_dbus_service.py  test_driver_worker.py  test_system_transactions.py  test_v3.py
